[gd_scene load_steps=2 format=3 uid="uid://b8r58bvdqp8hg"]

[ext_resource type="Script" path="res://scripts/editor.gd" id="1_3bqh5"]

[node name="ShipEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3bqh5")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 250

[node name="PartsPanelContainer" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/PartsPanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/PartsPanelContainer/VBoxContainer"]
layout_mode = 2
text = "Ship Parts"
horizontal_alignment = 1

[node name="PartsScrollContainer" type="ScrollContainer" parent="HSplitContainer/PartsPanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PartsContainer" type="VBoxContainer" parent="HSplitContainer/PartsPanelContainer/VBoxContainer/PartsScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ShipSelectionContainer" type="HBoxContainer" parent="HSplitContainer/PartsPanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/PartsPanelContainer/VBoxContainer/ShipSelectionContainer"]
layout_mode = 2
text = "Ship:"

[node name="ShipOptionButton" type="OptionButton" parent="HSplitContainer/PartsPanelContainer/VBoxContainer/ShipSelectionContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LoadShipButton" type="Button" parent="HSplitContainer/PartsPanelContainer/VBoxContainer"]
layout_mode = 2
text = "Load Ship"

[node name="SaveShipButton" type="Button" parent="HSplitContainer/PartsPanelContainer/VBoxContainer"]
layout_mode = 2
text = "Save Ship"

[node name="EditorPanelContainer" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/EditorPanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/EditorPanelContainer/VBoxContainer"]
layout_mode = 2
text = "Ship Editor"
horizontal_alignment = 1

[node name="EditorContainer" type="CenterContainer" parent="HSplitContainer/EditorPanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EditorViewport" type="SubViewportContainer" parent="HSplitContainer/EditorPanelContainer/VBoxContainer/EditorContainer"]
custom_minimum_size = Vector2(800, 600)
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="HSplitContainer/EditorPanelContainer/VBoxContainer/EditorContainer/EditorViewport"]
handle_input_locally = false
size = Vector2i(800, 600)
render_target_update_mode = 4

[node name="ShipSprite" type="Sprite2D" parent="HSplitContainer/EditorPanelContainer/VBoxContainer/EditorContainer/EditorViewport/SubViewport"]

[node name="GridContainer" type="Node2D" parent="HSplitContainer/EditorPanelContainer/VBoxContainer/EditorContainer/EditorViewport/SubViewport"]

[node name="PartsContainer" type="Node2D" parent="HSplitContainer/EditorPanelContainer/VBoxContainer/EditorContainer/EditorViewport/SubViewport"]

[node name="Camera2D" type="Camera2D" parent="HSplitContainer/EditorPanelContainer/VBoxContainer/EditorContainer/EditorViewport/SubViewport"]